--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.1",
+    "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "clsx": "^1.0.4",
     "history": "^4.9.0",
+    "localforage": "^1.7.3",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
@@ -40,9 +42,15 @@
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-perfect-scrollbar": "^1.5.3",
-    "react-router-dom": "^5.0.1",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.0.1",
     "recompose": "^0.30.0",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "2.3.0",
     "underscore": "^1.9.1",
     "uuid": "^3.3.2",
     "validate.js": "^0.13.1"
